# kinect-audio-setup

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  NEWS  README  kinect_fetch_fw  kinect_patch_udev_rules
contrib/: 55-kinect_audio.rules.in
debian/: README.Debian  changelog  config  control  copyright  gbp.conf  install  kinect-audio-setup.lintian-overrides  kinect_fetch_fw.8  kinect_upload_fw.8  manpages  postinst  postrm  rules  templates  watch
debian/lintian/: kinect-audio-setup
debian/patches/: 0001-kinect_upload_fw-fix-setting-configuration-for-some-.patch  series
debian/po/: cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  tr.po
kinect_upload_fw/: Makefile  endian.c  kinect_upload_fw.c
udev/: 55-kinect_audio.rules
windows/: README.asciidoc  kinect_upload_fw.bat
